# senderspike_plugins

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.gui  Makefile.nogui  Makefile.tools  README.md  gen_glue.sh
.github/workflows/: build.yml
src/: sn_core.cpp  sn_core.h  sn_ctrl.cpp  sn_ctrl.h  sn_vsti.cpp  sn_vsti.h
src/SN01/: CMakeLists.txt  SignalNoiseCompressor.cpp  SignalNoiseCompressor.h  SignalNoiseCompressorGUI.cpp  SignalNoiseCompressorGUI.h  sn01g.rc  sn_01e.h  sn_01g.cpp  sn_01g.h  vst_linux_entry.cpp
src/SN02/: sn02g.rc  sn_02g.cpp  sn_02g.h  vst_linux_entry.cpp
src/SN03/: CMakeLists.txt  SignalNoiseTapedeck.cpp  SignalNoiseTapedeck.h  SignalNoiseTapedeckGUI.cpp  SignalNoiseTapedeckGUI.h  sn03g.rc  sn_03e.h  sn_03g.cpp  vst_linux_entry.cpp
src/SN04/: CMakeLists.txt  SignalNoiseEqualizer.cpp  SignalNoiseEqualizer.h  SignalNoiseEqualizerGUI.cpp  SignalNoiseEqualizerGUI.h  sn04g.rc  sn_04e.h  sn_04g.cpp  vst_linux_entry.cpp
src/SN05/: CMakeLists.txt  SignalNoiseLimiter.cpp  SignalNoiseLimiter.h  SignalNoiseLimiterGUI.cpp  SignalNoiseLimiterGUI.h  sn05g.rc  sn_05e.cpp  sn_05e.h  vst_linux_entry.cpp
src/SN06/: CMakeLists.txt  SN06Editor.cpp  SN06Editor.h  SN06KnobLookAndFeel.cpp  SN06KnobLookAndFeel.h  SN06KnobPrecise.cpp  SN06KnobPrecise.h  SN06PeakLed.h  SN06PeakMeter.h  SN06Processor.cpp  SN06Processor.h  SignalNoiseOpamp.cpp  SignalNoiseOpamp.h  SignalNoiseOpampEditor.cpp  SignalNoiseOpampEditor.h  SignalNoiseOpampGUI.cpp  SignalNoiseOpampGUI.h  SignalNoiseOpampProcessor.cpp  SignalNoiseOpampProcessor.h  sn06g.rc  sn_06e.cpp  sn_06e.h  sn_06g.cpp  sn_06g.h  vst_linux_entry.cpp
src/shared/: CMakeLists.txt  FilmstripLookAndFeel.h  ParameterInfo.h  ParameterLabel.cpp  ParameterLabel.h  SNKnobLabel.cpp  SNKnobLabel.h  SNKnobLookAndFeel.cpp  SNKnobLookAndFeel.h  SNKnobPrecise.cpp  SNKnobPrecise.h  SNPeakLed.h  SNPeakMeter.cpp  SNPeakMeter.h  SignalNoiseFX.cpp  SignalNoiseFX.h  SignalNoiseFilmstripLNF.cpp  SignalNoiseFilmstripLNF.h  SignalNoiseGR.cpp  SignalNoiseGR.h  SignalNoiseKnob.cpp  SignalNoiseKnob.h  SignalNoiseKnobLabel.cpp  SignalNoiseKnobLabel.h  SignalNoiseKnobLookAndFeel.cpp  SignalNoiseKnobLookAndFeel.h  SignalNoiseKnobPrecise.cpp  SignalNoiseKnobPrecise.h  SignalNoiseLimiterGR.cpp  SignalNoiseLimiterGR.h  SignalNoisePeakLed.h  SignalNoisePeakMeter.cpp  SignalNoisePeakMeter.h  SignalNoiseSwitchButton.h  SignalNoiseVU.cpp  SignalNoiseVU.h  SwitchLookAndFeel.h  VUFilter.h  sn_core.cpp  sn_core.h
tools/: qtractor_fix_vst2_cache.sh  simple_host.cpp  simple_host_gui.cpp
